# ai-avatar

./: Makefile  README.md  pyproject.toml
src/ai_avatar/: client.py  common.py  server.py
