[tool.poetry]
name = "ai-avatar"
version = "1.0.0"
description = "Client-server application for AI avatar generation using diffusion models"
authors = ["Nicola De Angeli <112023843+niqodea@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

pydantic = "^2.9"

[tool.poetry.group.client.dependencies]
websockets = "^13.1"

[tool.poetry.group.server.dependencies]
Pillow = "^10.4"
torch = "^2.4"

diffusers = { version = "^0.30", extras = ["torch"] }
# Implicit diffusers dependencies
protobuf = "^5.28"
transformers = "^4.45"
sentencepiece = "^0.2"

# Web server
fastapi = "^0.115"
uvicorn = "^0.31"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.11"
ruff = "^0.6"

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle
  "F",  # Pyflakes
  "I",  # isort
  "SIM",  # flake8-simplify
  "UP",  # pyupgrade
]

# Solve bugbear raising B008 for Depends calls
# Ref: https://github.com/fastapi/fastapi/issues/1522#issuecomment-1435803420
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
